# OpenCV

./: .gitignore  CMakeLists.txt
helpfiles/: 【Git】删除GitHub中的某个文件夹以及Git常用命令.md
src/1.ShowImg/: 1.ShowImg.sln  1.ShowImg.vcxproj  CMakeLists.txt  CMakeSettings.json  main.cpp
src/2.PlayVideo/: CMakeLists.txt  main.cpp
